# Failure_Intelligence_System

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  FIE_COMPLETE_TECHNICAL_STORY.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TESTING.md  Technical_report.md  clear_and_test.py  cloudbuild.yaml  config.py  debug_test.py  inject_data.py  package-lock.json  pyproject.toml  railway.json  render.yaml  requirements.txt  stress_test_suite.py  test_ground_truth.py  test_sdk.py  upload_assets.py  verify_fixes.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml
Frontend/: .env.local.example  DEPLOYMENT.md  index.html  package-lock.json  package.json
Frontend/public/: robots.txt  sitemap.xml
Frontend/src/: App.jsx  index.css
README_files/: DOCUMENTATION.md  FIE_COMPLETE_TECHNICAL_STORY.md
app/: auth.py  auth_guard.py  auth_routes.py  limiter.py  main.py  notifications.py  routes.py  schemas.py  storage.py
app/routes/: __init__.py  _helpers.py  admin.py  analytics.py  flags.py  inference.py  monitor.py  playground.py
dashboard/: ui.py
dashboard/components/: charts.py  sidebar.py  widgets.py
dashboard/pages/: alerts_page.py  analyze_page.py  dashboard_page.py  diagnose_page.py  login_page.py  settings_page.py  vault_page.py
dashboard/styles/: theme.py
dashboard/utils/: api.py  data.py
data/: adversarial_eval_set.jsonl  collect_pair_training_data.py  download_datasets.py  eval_ablation_study.py  eval_adversarial.py  eval_baseline_comparison.py  eval_harmbench.py  eval_jailbreakbench.py  eval_jailbreakbench_tier1.py  eval_new_attacks.py  eval_new_attacks_results.json  eval_results_20260503_181829.json  eval_results_v2.json  fpr_v5_baseline.json  fpr_v6.json  fpr_v6_1.json  fpr_v6_1_t050.json  fpr_v6_1_t055.json  fpr_v6_2.json  pipeline_v5.json  pipeline_v6.json  pipeline_v6_1.json  pipeline_v6_1_t050.json  pipeline_v6_1_t055.json  pipeline_v6_2.json  rescore_pair_layer.py  results_new_attacks.json  synthetic_generator.py  train_v3.py  train_v4.py  training_results.json
data/ablation/: ablation_by_vector.json  ablation_isolating.json  ablation_v2.json  latency_study.json
data/baselines/: baseline_comparison.json  guard_baselines.json
data/benchmark_audit/: advbench_clean.jsonl  attack_expansion_manifest.json  combined_recall_report.json  decontam_report.json  fullpipe_gate_verdict.json  fullpipe_v6.json  fullpipe_v6_3b.json  harmbench_clean.jsonl  harmbench_leaked.jsonl  jbb_clean.jsonl  jbb_leaked.jsonl  leakage_report.json  recall_clean_report.json  sorrybench_clean.jsonl  sorrybench_dual_recall.json  sorrybench_per_category_named.json  sorrybench_taxonomy.json  strongreject_clean.jsonl  v63_vs_v62_report.json  v63b_threeway_report.json
data/calibration/: calibration_report.json
data/datasets/: truthfulqa.json  truthfulqa_sample.json
data/labeled/: run_summary_20260410_010702.json  synthetic_20260410_012109.jsonl
data/overrefusal/: manifest.json  orbench_hard_clean.jsonl  overrefusal_by_category.json  overrefusal_report.json  overrefusal_tradeoff.json  xstest_safe_clean.jsonl  xstest_unsafe_clean.jsonl  xstest_unsafe_leaked.jsonl
data/pair_training_v6/: augment_checkpoint.jsonl  augmentation_v63_manifest.json  augmentation_v63b_benign_manifest.json  augmented_v6.decontam.jsonl  augmented_v6.jsonl  augmented_v6_3_raw.jsonl  augmented_v6_3_test.jsonl  augmented_v6_3_train.jsonl  augmented_v6_3b_benign_leaked.jsonl  augmented_v6_3b_benign_test.jsonl  augmented_v6_3b_benign_train.jsonl  dataset_v6.decontam.jsonl  dataset_v6.jsonl  (+4 more)
docs/: ARCHITECTURE.md  CODEBASE.md  OPERATIONS.md  architecture_diagram.md  article_many_shot_jailbreak.md  cicd_gcp_cloud_run_guide.md  many_shot_diagram.md  research_paper_FIE.tex  research_paper_elsevier.tex
engine/: canary_tracker.py  claim_extractor.py  encoder.py  errors.py  failure_classifier.py  fie_config.py  fix_engine.py  groq_service.py  ground_truth_cache.py  hard_positive_collector.py  logging_config.py  model_extraction_tracker.py  multi_turn_tracker.py  ollama_service.py  prompt_guard.py  question_classifier.py  rag_grounder.py  roleplay_detector.py  session_store.py
examples/: adversarial_detection.py  basic_monitoring.py  batch_analysis.py  langchain_integration.py  openai_integration.py
fie/: __init__.py  __main__.py  _lite.py  _telemetry.py  adversarial.py  client.py  config.py  feedback_store.py  fiction_harm.py  framing_filter.py  llama_guard.py  local_predictor.py  monitor.py  multilingual.py  output_scanner.py  preflight.py  session_tracker.py  stream_guard.py  virtualization.py
fie-dashboard/: .env.example  DEPLOYMENT.md  index.html  package-lock.json  package.json
models/: ensemble_classifiers.pkl  failure_classifier.pkl  failure_classifier_v2.pkl  failure_classifier_v3.pkl  feature_columns.pkl  feature_columns_v2.pkl  feature_columns_v3.pkl  pair_intent_meta.json
notebooks/: fie_classifier_training.ipynb  fie_model_comparison.ipynb  fie_vs_llama_guard_benchmark.ipynb  fie_vs_llamaguard_full_predictions.csv  fie_vs_llamaguard_results.csv  reasoning_benchmark_evaluation.ipynb  train_pair_classifier.ipynb
scripts/: download_models.py  extend_benchmarks.py  model_manifest.json  nllb_augment.py  retrain_pair_v2.py  retrain_pair_v3.py  train_meta_classifier.py
storage/: database.py  faiss_adversarial.index  signal_logger.py
telemetry-server/: main.py
tests/: benchmark_reasoning.py  chat_msj_test.py  check_db.py  check_serper.py  debug_test.py  demo.py  eval_datasets.py  stress_test_suite.py  test_adversarial_full.py  test_adversarial_unknown.py  test_auditor.py  test_auth_visibility.py  test_core.py  test_explainability.py  test_integration.py  test_local.py  test_monitor_rag_fix.py  test_ollama_connection.py  test_paraphrase_evasion.py  test_phase.py  test_provenance_phase3.py  test_realtime_pipeline.py  test_sdk.py  test_with_rag.py  test_without_rag.py
(+85 files in other folders)
