[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "fie-sdk"
version         = "1.15.0"
description     = "Failure Intelligence Engine — adversarial detection + hallucination monitoring for LLMs. PAIR v5 classifier (88.9% TPR, 7.5% FPR, sklearn 1.7.2), 12-layer parallel pipeline, XGBoost meta-classifier, scan_prompt_async(), LayerEvidence schema, copyright detection, multilingual 14/14 recall. Works fully offline or with a server."
readme          = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license         = { text = "Apache-2.0" }

authors = [
    { name = "Ayush", email = "ayushsingh355vns@gmail.com" }
]
keywords = [
    "llm",
    "monitoring",
    "observability",
    "hallucination-detection",
    "ai-safety",
    "prompt-injection",
    "jailbreak-detection",
    "adversarial-detection",
    "llama-guard",
    "model-degradation",
    "explainable-ai",
    "reliability",
    "ai-guardrails",
    "xgboost",
    "session-tracking",
    "ground-truth-verification",
    "failure-intelligence"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "requests>=2.28.0",
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
]

[project.scripts]
fie = "fie.__main__:main"

[project.optional-dependencies]
lite = [
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "joblib>=1.3",
    "pandas>=2.0",
    "sentence-transformers>=2.7",
]
openai = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.25",
]
all = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "joblib>=1.3",
    "pandas>=2.0",
    "sentence-transformers>=2.7",
    "openai>=1.0",
    "anthropic>=0.25",
]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "slowapi>=0.1.9",
    "langgraph>=0.2.0",
    "pymongo>=4.6",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "ruff>=0.4",
]

[project.urls]
Homepage      = "https://github.com/AyushSingh110/Failure_Intelligence_System"
Repository    = "https://github.com/AyushSingh110/Failure_Intelligence_System"
Issues        = "https://github.com/AyushSingh110/Failure_Intelligence_System/issues"
Documentation = "https://github.com/AyushSingh110/Failure_Intelligence_System#readme"
Changelog     = "https://github.com/AyushSingh110/Failure_Intelligence_System/releases"

[tool.hatch.build]
artifacts = [
    "fie/models/*.pkl",
    "fie/models/*.json",
]

[tool.hatch.build.targets.wheel]
packages = ["fie"]
